Closed
Bug 529500
Opened 16 years ago
Closed 15 years ago
"Reset Camino..." doesn't clear "Recently Closed Pages" if History menu hasn't been viewed first/since the last reset
Categories
(Camino Graveyard :: History, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: james.d.baker, Assigned: stuart.morgan+bugzilla)
References
Details
(Whiteboard: [camino-2.0.3])
Attachments
(1 file)
5.02 KB,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en; rv:1.9.0.15) Gecko/2009102617 Camino/2.0 (like Firefox/3.0.15)
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.6; en; rv:1.9.0.15) Gecko/2009102617 Camino/2.0 (like Firefox/3.0.15)
"Reset Camino..." is supposed to reset Camino completely to it's original state, but it doesn't clear the "Recently Closed Pages" menu on the History menu.
Reproducible: Always
Steps to Reproduce:
1. Visit a couple of pages
2. Choose "Reset Camino" from the Camino menu
3. View your Recently Closed Pages in the History menu
Actual Results:
There are still results in the Recently Closed Pages menu
Expected Results:
There should be no pages shown in the Recently Closed Pages menu
Comment 1•16 years ago
|
||
Since the first phrase of the dialog text is "Resetting Camino will erase your browsing history", I think we probably just forgot to do this when we implemented that feature.
I'll let Stuart chime in if it was intentional, though.
Comment 2•16 years ago
|
||
I can't reproduce this at all with a fresh OS X user account (for obvious reasons, I'm not testing this with my normal account). Stuart accounted for this when he wrote the code:
http://mxr.mozilla.org/mozilla/source/camino/src/browser/HistoryMenu.mm#584
so I'm not quite sure how this might be happening.
Can you reproduce it with a fresh Camino profile (using Troubleshoot Camino) or in a fresh OS X user account?
http://pimpmycamino.com/parts/troubleshoot-camino if you don't already have Troubleshoot Camino.
Reporter | ||
Comment 3•16 years ago
|
||
I can reproduce it using a fresh Camino profile. I omitted to state that it's on the latest Release Candidate of Camino 2 that I've experienced it. I don't know whether or not it applies to the current stable version.
Version: unspecified → Trunk
Comment 4•16 years ago
|
||
Please check this again with Camino 2.0.1; I still can't reproduce the problem, though.
Reporter | ||
Comment 5•16 years ago
|
||
I haven't been able to reproduce this with the latest version of Camino, so it would seem it's been fixed.
Comment 6•16 years ago
|
||
WORKSFORME, since we have no idea what magically fixed this and none of us were ever able to repro. Thanks, James.
Status: UNCONFIRMED → RESOLVED
Closed: 16 years ago
Resolution: --- → WORKSFORME
Bob:
(In reply to bug 561685 comment #4)
> OK I CAN reproduce this. It IS in the "recently closed pages" submenu under
> "History". Resetting Camino a second time clears this.
>
> The first time I tried to reproduce, I did not have any pages I had closed,
> hence there were no "recently closed pages" to show.
So you're saying that every time when you have recently closed pages, Reset doesn't clear them? I.e.,
1) Launch Camino
2) Visit http://www.google.com/
3) Close the tab/window
4) Reset Camino
--> http://www.google.com/ still in Recently Closed Pages
5) Reset Camino again
--> Recently Closed Pages is empty
6) Visit http://www.google.com/ again
7) Close the tab/window
8) Reset Camino
--> http://www.google.com/ still in Recently Closed Pages
9) Reset Camino again
--> Recently Closed Pages is empty
…
and so forth?
Status: RESOLVED → UNCONFIRMED
Resolution: WORKSFORME → ---
This the inverse of bug 458527, more or less, in that the menu isn't cleared if the History menu hasn't been shown (I guess this is more of our fun with that lazy menu stuff)?
That's the way I can repro this, btw; steps 1-4 above (pages still in RCP), but the very next time, it is cleared (since I viewed the History menu to verify the non-absence).
If I then reset Camino *and don't inspect the History menu*, and don't inspect the History menu again before resetting Camino the next time, RCP will not be cleared again.
The point being that, unless you've shown the History menu since the last time you've reset Camino, RCP won't be cleared. (Or, viewing the History menu makes RCP clearable, which is why everyone's "second reset" after they've noticed RCP not cleared works.)
Specifically, http://mxr.mozilla.org/camino/source/src/browser/HistoryMenu.mm#587 seems to me to indicate that we clear RCP only as a consequence of some other condition, which condition is apparently not always true when resetting Camino.
cl suggests that we just add a new method to explicitly clear out mRecentlyClosedMenu when Reset Camino is called, only MainController doesn't know anything about HistoryMenu (and probably shouldn't need to).
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: "Reset Camino..." doesn't clear "Recently Closed Pages" → "Reset Camino..." doesn't clear "Recently Closed Pages" if History menu hasn't been viewed first/since the last reset
(Nominating so that this stays on the radar for 2.0.4 at least.)
Flags: camino2.0.3?
Assignee | ||
Updated•15 years ago
|
Assignee: nobody → stuart.morgan+bugzilla
Status: NEW → ASSIGNED
Assignee | ||
Comment 12•15 years ago
|
||
My logic from fixing the earlier bug was clearly broken in this case, and when I tried to make it smarter I found that the change notifications are actually not nearly so straightforward as I had thought. Rather than try to guess based on the complex change system, I added a new notification that actually tells us what we want to know ("history has been cleared"), so this will be much more robust.
Attachment #445582 -
Flags: superreview?(mikepinkerton)
Comment 13•15 years ago
|
||
Comment on attachment 445582 [details] [diff] [review]
fix
sr=pink
fwiw, i think we have this problem in chrome too.
Attachment #445582 -
Flags: superreview?(mikepinkerton) → superreview+
Assignee | ||
Updated•15 years ago
|
Flags: camino2.0.3? → camino2.0.3+
Assignee | ||
Comment 14•15 years ago
|
||
Landed on CVS trunk and CAMINO_2_0_BRANCH.
Assignee | ||
Comment 15•15 years ago
|
||
Hm, scratch the 2.0 branch part:
file `src/history/HistoryDataSource.mm' had a conflict and has not been modified
http://hg.mozilla.org/camino/rev/af4e2dbeb2ba and a merged src/history/HistoryDataSource.mm on CAMINO_2_0_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago → 15 years ago
Resolution: --- → FIXED
Whiteboard: [camino-2.0.3]
Depends on: 566745
You need to log in
before you can comment on or make changes to this bug.
Description
•