Camino only - Bug 529500: Add a notification when history is cleared, and key recent page menu reset off of that. r/sr=pink