camino/src/history/HistoryDataSource.mm
@@ -72,6 +72,7 @@ NSString* const kHistoryViewFlat      = @"flat";
 NSString* const kNotificationNameHistoryDataSourceChanged                     = @"history_changed";
 NSString* const kNotificationHistoryDataSourceChangedUserInfoChangedItem      = @"changed_item";
 NSString* const kNotificationHistoryDataSourceChangedUserInfoChangedItemOnly  = @"item_only";
+NSString* const kNotificationNameHistoryDataSourceCleared                     = @"history_cleared";
 
 struct SortData
 {
@@ -1146,6 +1147,11 @@ NS_IMPL_ISUPPORTS1(nsNavHistoryObserver, nsINavHistoryObserver);
 {
   [mHistoryItems removeAllObjects];
   [mHistoryItemsDictionary removeAllObjects];
+
+  [[NSNotificationCenter defaultCenter]
+      postNotificationName:kNotificationNameHistoryDataSourceCleared
+                    object:self
+                  userInfo:nil];
 }
 
 #pragma mark -
